tests/fixtures/invalid/pow_int_dict_int.py
# Cannot call pow() with Int, Dict[str, int], Int
x = pow(1, {"a": 1}, 1)
